--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -3,4 +3,5 @@ connection.url=jdbc:hsqldb:file:db/usermanagement
 connection.user=sa
 connection.password=
 
+dao.factory=ua.nure.kn16.oleynik.usermanagement.db.DaoFactoryImpl
 dao.ua.nure.kn16.oleynik.usermanagement.db.UserDao=ua.nure.kn16.oleynik.usermanagement.db.HsqldbUserDao 
