--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,7 +1,7 @@
 connection.driver=org.hsqldb.jdbcDriver
-connection.url=jdbc:hsqldb:file:db/usermanagement
+connection.url=jdbc:hsqldb:file:db/labs
 connection.user=sa
 connection.password=
 
-dao.factory=chekalkin.labs.db.DaoFactoryImpl
-dao.ua.nure.kn16.chekalkin.usermanagement.db.UserDao=chekalkin.labs.db.HsqldbUserDao 
+dao.factory=ua.nure.kn16.oleynik.usermanagement.db.DaoFactoryImpl
+pakhomov.labs.db.UserDao=ua.nure.kn16.oleynik.usermanagement.db.HsqldbUserDao 
